# SmartRAG

./: .gitignore  Dockerfile  docker-compose.yml  notes.md  pyproject.toml
.github/workflows/: ci.yml
sec-10K-filings/: 2023 Q1 MSFT.md  2023 Q1 MSFT_chunks.json
src/agent/: builder.py  state.py  workflow.py
src/api/: dependencies.py  main.py  schemas.py
src/core/: config.py
src/data/: ingest.py
src/eval/: custom_metrics.py  dataset.py  graders.py  run_test.py  wrappers.py
src/prompts/: system.py  templates.py
src/tools/: sec_search.py
src/ui/: app.py
