[project]
name = "smartrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "motor>=3.7.1",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "tiktoken>=0.12.0",
    "unstructured>=0.22.21",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort (auto-sorts imports)
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
